# terratest

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  terratest.rc
res/shaders/: gui.vert  outline.frag  simple.frag  simple.vert  sun.frag  texture.frag  transform-vert.vert
src/: animation.c  block.c  block.h  boss.c  boss.h  crafting.c  crafting.h  display.c  draw.c  draw.h  enemy.c  enemy.h  game.c  game.h  gl-func.c  gl-func.h  inventory.c  inventory.h  lighting.c  main.c  menu.c  menu.h  player.c  player.h  quadtree.c  quadtree.h  savefile.c  savefile.h  savemenu.c  spawnenemies.c  sprite.c  sprite.h  update-blocks.c  update-items.c  update-liquid.c  update-plants.c  update.c  updatedoors.c  window-func.c  window-func.h  (+2 more)
